# realflight-bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  tarpaulin.toml
.github/workflows/: build.yaml  coverage.yaml
benches/: decode_state_bench.rs  parse_fault_bench.rs
examples/: benchmark.rs  remote_bridge.rs  smoke.rs  smoke_test.rs
src/: bridge.rs  connection_manager.rs  lib.rs  statistics.rs  tests.rs
src/bridge/: local.rs  mod.rs  proxy.rs  remote.rs
src/bridge/local/: async_impl.rs  mod.rs  tests.rs
src/bridge/proxy/: async_impl.rs  handler.rs  mod.rs  tests.rs
src/bridge/remote/: async_impl.rs  mod.rs  tests.rs
src/decoders/: mod.rs  tests.rs
src/encoders/: mod.rs
src/soap_client/: mod.rs  pool.rs  pool_async.rs  stub.rs  stub_async.rs  tcp.rs  tcp_async.rs  xml.rs
src/tests/: mod.rs  soap_stub.rs
testdata/: pretty.xml  response.xml
testdata/responses/: inject-uav-controller-interface-200.xml  inject-uav-controller-interface-500.xml  reset-aircraft-200.xml  restore-orginal-controller-device-500.xml  restore-original-controller-device-200.xml  return-data-200.xml  return-data-500.xml
