[package]
name = "realflight-bridge"
version = "0.3.0"
edition = "2021"
authors = ["Wil Boayue <wil@wsbsolutions.com>"]
readme = "README.md"
description = "RealFlightBridge is a Rust library that interfaces with RealFlight Link, enabling external flight controllers to interact with the simulator."
homepage = "https://github.com/wboayue/realflight-bridge/"
repository = "https://github.com/wboayue/realflight-bridge/"
documentation = "https://docs.rs/realflight-bridge/latest/realflight_bridge/index.html"
license = "MIT"
keywords = ["realflight", "flight-simulator", "robotics", "control-systems"]
categories = ["aerospace::simulation", "aerospace::drones", "game-development"]
exclude = [
    "justfile",
]

[features]
# Feature flag for benchmarking
bench-internals = []

[dependencies]
uom = { version = "0.36.0", features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.25"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1.1", features = ["use-std"] }
anyhow = "1.0.97"
clap = "4.5.28"

[dev-dependencies]
clap = "4.5.28"
rand = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.2.0"

[[bench]]
name = "decode_state_bench"
harness = false
