[package]
name = "realflight-bridge"
version = "1.0.0"
edition = "2024"
authors = ["Wil Boayue <wil@wsbsolutions.com>"]
readme = "README.md"
description = "RealFlightBridge is a Rust library that interfaces with RealFlight Link, enabling external flight controllers to interact with the simulator."
homepage = "https://github.com/wboayue/realflight-bridge/"
repository = "https://github.com/wboayue/realflight-bridge/"
documentation = "https://docs.rs/realflight-bridge/latest/realflight_bridge/index.html"
license = "MIT"
keywords = ["realflight", "flight-simulator", "robotics", "control-systems"]
categories = ["aerospace::simulation", "aerospace::drones", "game-development"]
exclude = [
    "justfile",
]

[features]
default = []
uom = ["dep:uom"]
bench-internals = []
rt-tokio = ["dep:tokio", "dep:tokio-util"]

[dependencies]
uom = { version = "0.37.0", features = ["serde"], optional = true }
env_logger = "0.11.8"
log = "0.4.29"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
thiserror = "2.0"
clap = "4.5.54"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "time", "macros", "rt-multi-thread"], optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }

[dev-dependencies]
clap = "4.5.54"
rand = "0.9"
criterion = { version = "0.8", features = ["html_reports"] }
serial_test = "3.3.1"
approx = "0.5.1"

[[bench]]
name = "decode_state_bench"
harness = false
